[project]
name = "final-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "ipysheet>=0.7.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.2",
    "jupyterlab-myst>=2.4.2",
    "manim>=0.19.0",
    "mystmd>=1.3.26",
]
